candidates_list intial commit

--- a/website/index.html
+++ b/website/index.html
@@ -3,12 +3,20 @@
   <title>Kyle Stone Homework 4</title>
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
-  
-</head>
-<body onload= "myFunction()">
-  <h1>Kyle Stone Homework 4</h1>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/script.js"></script>
-  <div id= "response"></div>
-  <div id= "star"></div>
+   
+</head>
+<body>
+  <h1 id="List">Candidate List
+      <table></table>
+  </h1>
+  <div id="CreateCandidate">
+    <h1 id="Enter">Create a Candidate</h1>
+    <input type="text" id="NewCandidate" value = "name">
+    <br>
+    <button id="add">Create</button>
+  </div>
 </body>
 </html>
